# idfm_offre_realisee_ponctualite_regularite

./: .flake8  .gitignore  Makefile  README.md  azure-pipelines.yml  main.py  pyproject.toml  requirements.txt  requirements_build.txt  requirements_dev.txt
.github/workflows/: pipeline.yml  python-publish.yml
0_documentation/: QS_notice_tech.md
0_documentation/adr/: 0_template.md
0_documentation/doctrees/: aggregate.doctree  aggregate_mesure_qs copy.doctree  aggregate_mesure_qs.doctree  create_mesure_qs_ponctualite.doctree  create_mesure_qs_regularite.doctree  environment.pickle  index.doctree
0_documentation/doctrees/domain/: domain.doctree
0_documentation/doctrees/infrastructure/: aggregate_mesure_qs.doctree  (+3 more)
0_documentation/html/: .buildinfo  .buildinfo.bak  aggregate.html  aggregate_mesure_qs copy.html  aggregate_mesure_qs.html  create_mesure_qs_ponctualite.html  create_mesure_qs_regularite.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0_documentation/optimisation/: 20250606 Optimisation silver to gold QS ponctualite.md  20250606 Optimisation silver to gold QS regularite.md
0_documentation/postmortem/: 0_template.md
config/: config.py  file_extensions.py  logger.py
offre_realisee/: __init__.py
offre_realisee/config/: aggregation_config.py  calendrier_scolaire_config.py  file_extensions.py  input_config.py  logger.py  offre_realisee_config.py
offre_realisee/infrastructure/: calendrier_scolaire_api_handler.py  local_file_system_handler.py
source/: conf.py  index.rst
source/infrastructure/: infrastructure.rst
tests/test_data/: __init__.py
(+157 files in other folders)
