[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "idfm-qualite-de-service-calculateur"
version = "1.2.0"
description = "Calculateur de qualité de service basé sur les données d'offre réalisées"
readme = "README.md"
dependencies = [
    'pandas >= 2.0.0',
    'pyarrow >= 15.0.0',
    'scipy >= 1.11.3',
    'workalendar == 17.0.0',
    'multiprocess >= 0.70.16',
]

[tool.setuptools.packages.find]
include = ["offre_realisee*"]

[project.scripts]
offre_realisee = "offre_realisee:main"
